kubernetes/apps/database/ghostfolio-db/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ghostfolio-dragonfly-allow-default
spec:
  podSelector:
    matchLabels:
      app: ghostfolio-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - port: 6379
          protocol: TCP
  policyTypes:
    - Ingress
